overflow fix

--- a/frontend/src/scenes/dashboard/DashboardHeader.scss
+++ b/frontend/src/scenes/dashboard/DashboardHeader.scss
@@ -29,6 +29,7 @@
                     font-size: var(--dashboard-title-size);
                     line-height: var(--dashboard-title-size);
                     width: 100%;
+                    height: 35px;
                     overflow: hidden;
                     text-overflow: ellipsis;
                 }
